[PL CC] Hacky fixed an issue with tags not showing properly in the job table

--- a/foundations_ui/src/scss/views/input-metric.scss
+++ b/foundations_ui/src/scss/views/input-metric.scss
@@ -56,6 +56,7 @@
 
   .input-metric-column-container:nth-of-type(2) {
     vertical-align: top;
+    min-height: 264px;
   }
 }
 
